--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "json-sass",
-  "version": "1.3.5",
+  "name": "rootbeer",
+  "version": "0.0.0",
   "description": "Transform JSON into scss syntax Sass.",
-  "main": "lib/jsonSass.js",
-  "bin": "lib/bin/json-sass",
+  "main": "lib/rootbeer.js",
+  "bin": "lib/bin/rootbeer",
   "scripts": {
     "test": "make test",
     "prepublish": "npm test"
@@ -12,8 +12,7 @@
     "sass",
     "JSON"
   ],
-  "author": "Andrew Clark <acdlite@me.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "babel": "~4.1.0",
     "lodash": "~2.4.1",
