--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "JSON"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gkatsev/rootbeer"
+  },
   "dependencies": {
     "babel": "~4.1.0",
     "lodash": "~2.4.1",
