--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lodash": "^3.10.1",
     "minimist": "^1.2.0",
     "object-assign": "^4.0.1",
-    "through2": "^2.0.0"
+    "through2": "^2.0.0",
+    "tsmlb": "^1.0.0"
   },
   "devDependencies": {
     "babel": "^5.8.34",
