--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "lodash": "^3.10.1",
     "minimist": "^1.2.0",
-    "object-assign": "^4.0.1",
+    "object.assign": "^4.1.2",
     "through2": "^2.0.0",
     "tsmlb": "^1.0.0"
   },
