--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/gkatsev/rootbeer"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
+    "lodash.isplainobject": "^4.0.6",
     "minimist": "^1.2.5",
     "object.assign": "^4.1.2",
     "through2": "^4.0.2",
