--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "url": "https://github.com/gkatsev/rootbeer"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
-    "minimist": "^1.2.0",
-    "object-assign": "^4.0.1",
-    "through2": "^2.0.0",
+    "lodash.isplainobject": "^4.0.6",
+    "minimist": "^1.2.5",
+    "object.assign": "^4.1.2",
+    "through2": "^4.0.2",
     "tsmlb": "^1.0.0"
   },
   "devDependencies": {
