--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tsmlb": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.34",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
     "chai": "^3.4.1",
     "mocha": "^2.3.4"
   }
