--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/gkatsev/rootbeer"
   },
   "dependencies": {
+    "css-color-names": "^1.0.1",
     "lodash.isplainobject": "^4.0.6",
     "minimist": "^1.2.5",
     "object.assign": "^4.1.2",
